--- a/SiaSkynet.Sample.Blazor/Pages/Index.razor
+++ b/SiaSkynet.Sample.Blazor/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject NavigationManager MyNavigationManager
 @using SiaSkynet;
 
 <h1>Sia Skynet Blazor Sample App</h1>
@@ -75,7 +76,6 @@
 
 @code
 {
-
     SiaSkynetClient client = new SiaSkynetClient();
 
     string seedPhrase = "";
@@ -87,6 +87,19 @@
     bool success = true;
     byte[]? privateKey;
     byte[]? publicKey;
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+#if RELEASE
+        string baseUrl = MyNavigationManager.BaseUri;
+        var uri = new Uri(baseUrl);
+        var portalDomain = $"{uri.Scheme}://{uri.Authority}/";
+        client = new SiaSkynetClient(portalDomain);
+#endif
+
+    }
 
     private void SetSeedPhraseValue(string Value)
     {
