--- a/SiaSkynet.Sample.Blazor/Pages/Index.razor
+++ b/SiaSkynet.Sample.Blazor/Pages/Index.razor
@@ -98,7 +98,7 @@
     string encryptText = "";
     string decryptText = "";
     string loadedDocumentText = "";
-    RegistryKey dataKey = new RegistryKey("blazor-sample");
+    RegistryKey dataKey = new RegistryKey("blazor-sample-3");
     bool saving = false;
     bool loading = false;
     bool success = true;
